<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/Menu.Font.Purple"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_a"
        android:height="25dp"
        android:textSize="23sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/search_hit"
        android:height="25dp"/>

    <Button
        android:id="@+id/button_jump_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_b"
        android:height="25dp"/>

    <Button
        android:id="@+id/button_jump_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_c"
        android:height="25dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>